revising login layout bug

--- a/wp-content/themes/DPR5/style.less
+++ b/wp-content/themes/DPR5/style.less
@@ -1698,6 +1698,7 @@ html.ng-scope {
 			width: 100%;
 			label {
 				margin-top: 7px;
+				padding: 0;
 			}
 			input[type=text], input[type=password] {
 				color: @white;
